Updated some views

--- a/CandyShop/Views/Candy/List.cshtml
+++ b/CandyShop/Views/Candy/List.cshtml
@@ -14,7 +14,7 @@
 
 @foreach (var candy in Model.Candies)
 {
-    <partial name="Components/_candyCard" model="candy" view-data="ViewData" />
+    <partial name="Components/_candyCard" model="candy"  />
 }
 
 
