--- a/CandyShop/Views/Home/Index.cshtml
+++ b/CandyShop/Views/Home/Index.cshtml
@@ -8,6 +8,6 @@
 <div class="row">
     @foreach (var candy in Model.CandyOnSale)
     {
-        <partial name="Components/_candyCard" model="candy" view-data="ViewData" />
+        <partial name="Components/_candyCard" model="candy" />
     }
 </div>
